--- a/scripts/scriptSink/eefecund_viz.Rmd
+++ b/scripts/scriptSink/eefecund_viz.Rmd
@@ -17,8 +17,6 @@ source("ggplot_theme.R")
 
 ```
 
-# Data
-
 ```{r}
 eggs <- read.table("~/MyGithub/early_experience/processed/tricount.txt",
             sep = '\t', header = TRUE)
@@ -129,101 +127,228 @@ qfemale <- quants %>%
 qfemale$tgroup <- str_split(qfemale$sgroup, "_F", simplify = TRUE)[,1] 
 
 qfemale <- select(qfemale, tgroup,q25,q50,q75) %>%
-  pivot_longer(cols=2:4,names_to = "Quartile",values_to="surv_prob")
+  pivot_longer(cols=2:4,names_to = "phase",values_to="surv_prob")
 
+# Mean eggs per quantile
+zdn$tgroup <- gsub("\\d", "", zdn$id)
+
+se = function(x) sd(x)/sqrt(length(x))
+                            
+quantile(zdn$age)
+
+eggs_q25 <- filter(zdn, age <= 20) %>%
+  select(tgroup,age,eggpFemDay) %>%
+  group_by(tgroup) %>%
+  summarise(q25_e = mean(eggpFemDay, na.rm = TRUE),
+              q25_se = se(eggpFemDay))
+
+eggs_q50 <- filter(zdn, age %in% (21:41)) %>%
+  select(tgroup,age,eggpFemDay) %>%
+  group_by(tgroup) %>%
+  summarise(q50_e = mean(eggpFemDay, na.rm = TRUE),
+              q50_se = se(eggpFemDay))
+
+eggs_q75 <- filter(zdn, age %in% (42:59)) %>%
+  select(tgroup,age,eggpFemDay) %>%
+  group_by(tgroup) %>%
+  summarise(q75_e = mean(eggpFemDay, na.rm = TRUE),
+            q75_se = se(eggpFemDay))
+
+# eggs_q100 <- filter(zdn, age %in% (60:85)) %>%
+#   select(tgroup,age,eggpFemDay) %>%
+#   group_by(tgroup) %>%
+#   summarise(q100_e = mean(eggpFemDay, na.rm = TRUE),
+#             q100_se = se(eggpFemDay))
+
+eggsf <- Reduce(function(x, y) merge(x, y, all=TRUE), 
+                    list(eggs_q25,eggs_q50,eggs_q75))
+eggsf <- eggsf %>%
+  pivot_longer(cols=-tgroup,
+               names_to=c("qeggs_qse"),
+               values_to="score") %>%
+  as.data.frame() 
+
+
+lu <- eggsf %>%
+  filter(grepl("_se",qeggs_qse)) %>%
+  rename(se_eggs="score")
+
+le <- eggsf %>% 
+  filter(grepl("_e",qeggs_qse)) %>%
+  rename(eggs="score") %>%
+  cbind(qfemale,lu) 
+le <- le[,c(1,5,6,3,9)]
+
+
+tv <- ggplot(le, aes(surv_prob,eggs),color=phase) +
+  geom_point() +
+  geom_line() +
+  geom_errorbar(aes(ymin=eggs-se_eggs, ymax=eggs+se_eggs), width=.1,
+                 position=position_dodge(0.05)) +
+  facet_grid(. ~ tgroup) +
+  #facet_grid(cols=vars(tgroup), rows=vars(phase), scales= "free_x") +
+  #scale_x_discrete(position = "top") +
+  #theme(axis.title.x = element_blank(), axis.text.x = element_blank())
+  scale_colour_OkabeIto() +
+  theme_half_open() 
+  #tx_color_map() 
 ```
 
 # Add all egg data to graph for summarized quants
 
 ```{r}
-# Mean eggs per quantile
 se = function(x) sd(x)/sqrt(length(x))
-
-zdn$tgroup <- gsub("\\d", "", zdn$id)
-                            
-quantile(zdn$age)
-
 
 uq25 <- filter(zdn, age <= 20) %>%
   select(tgroup,age,eggpFemDay)
-uq25$Quartile <- "q25"
+uq25$phase <- "q25"
 
 uq25se <- uq25 %>%
   select(tgroup,age,eggpFemDay) %>%
   group_by(tgroup) %>%
   summarise(qe = mean(eggpFemDay, na.rm = TRUE),
               qse = se(eggpFemDay))
-uq25se$Quartile <- "q25"
+uq25se$phase <- "q25"
 
 
 uq50 <- filter(zdn, age %in% (21:41)) %>%
   select(tgroup,age,eggpFemDay)
-uq50$Quartile <- "q50"
+uq50$phase <- "q50"
 
 uq50se <- uq50 %>%
   select(tgroup,age,eggpFemDay) %>%
   group_by(tgroup) %>%
   summarise(qe = mean(eggpFemDay, na.rm = TRUE),
               qse = se(eggpFemDay))
-uq50se$Quartile <- "q50"
+uq50se$phase <- "q50"
 
 
 uq75 <- filter(zdn, age %in% (42:59)) %>%
   select(tgroup,age,eggpFemDay)
-uq75$Quartile <- "q75"
+uq75$phase <- "q75"
 
 uq75se <- uq75 %>%
   select(tgroup,age,eggpFemDay) %>%
   group_by(tgroup) %>%
   summarise(qe = mean(eggpFemDay, na.rm = TRUE),
               qse = se(eggpFemDay))
-uq75se$Quartile <- "q75"
-
+uq75se$phase <- "q75"
 
 uq100 <- filter(zdn, age %in% (60:85)) %>%
   select(tgroup,age,eggpFemDay)
-uq100$Quartile <- "q100"
+uq100$phase <- "q100"
 
 uq100se <- uq100 %>%
   select(tgroup,age,eggpFemDay) %>%
   group_by(tgroup) %>%
   summarise(qe = mean(eggpFemDay, na.rm = TRUE),
             qse = se(eggpFemDay))
-uq100se$Quartile <- "q100"
-
+uq100se$phase <- "q100"
 
 uq <- rbind(uq25,uq50,uq75,uq100)
 uqse <- rbind(uq25se,uq50se,uq75se,uq100se)
 
-
 tf <- uq %>%
   arrange(age) %>%
-  mutate(Quartile = factor(Quartile, levels=c("q25","q50","q75","q100"))) %>%
-  group_by(Quartile) %>%
-  ggplot(aes(age,eggpFemDay,color=Quartile)) +
+  mutate(phase = factor(phase, levels=c("q25","q50","q75","q100"))) %>%
+  group_by(phase) %>%
+  ggplot(aes(age,eggpFemDay,color=tgroup)) +
   geom_jitter(size=3, alpha = 0.6) +
   geom_smooth(se=FALSE,color="black") +
   #geom = c("point", "line",data=uqse,aes(tgroup,qe)) +
   #facet_grid(. ~ tgroup) +
-  facet_grid(cols=vars(tgroup), rows=vars(Quartile), scales= "free_y") +
+  facet_grid(cols=vars(tgroup), rows=vars(phase), scales= "free_y") +
   scale_colour_OkabeIto() +
   #tx_color_map() +
-  xlab("Age (Days)") + ylab("Eggs female (3 hrs/wk)") +
   my_theme +
   theme_half_open() 
-tf + labs(fill = "Quartile")
+tf
 
-ggsave(tf,file = "../plots/Eggs_perFemale_per3Hrs.pdf",
-                width = 6,height=4)
-ggsave(tf,file = "../plots/Eggs_perFemale_per3HrsQs.pdf",
-                width = 8,height=6)
+tf <- uq %>%
+  group_by(phase)
+  
+qplot(age, eggpFemDay, geom = c("point", "line"),data=uq)
 
-
-# library(grid)
-# grid.newpage()
-# grid.draw(rbind(ggplotGrob(tv), ggplotGrob(tt), size = "last"))
+library(grid)
+grid.newpage()
+grid.draw(rbind(ggplotGrob(tv), ggplotGrob(tt), size = "last"))
 
 ```
 
+# Median lifespan vs eggs
 
+```{r}
+head(qfemale)
+qf <- filter(qfemale, phase=="q50")
+
+head(zdn)
+qs <- filter(zdn, age %in% (21:41)) %>%
+  select(tgroup,age,eggpFemDay) %>%
+  group_by(tgroup) %>%
+  summarise(q50_e = mean(eggpFemDay, na.rm = TRUE),
+              q50_se = se(eggpFemDay))
+```
+
+
+```{r}
+eggs_young <- filter(zdn, age <= quantile(zdn$age, probs = 0.25)) %>%
+  select(tgroup,age,eggpFemDay) %>%
+  group_by(tgroup) %>%
+  summarise(q25e = mean(eggpFemDay, na.rm = TRUE),
+              q25se = se(eggpFemDay))
+# se_young <- eggs_young[,c(1,3)]
+# eggs_young <- select(eggs_young,tgroup,q25)
+
+
+
+pyo <- ggplot(eggs_young,aes(tgroup,q25))+
+  geom_point() +
+  geom_line() +
+  geom_errorbar(aes(ymin=q25-se_young,ymax=q25+se_young),
+                width=.2,position=position_dodge(0.05)) +
+  scale_colour_OkabeIto() +
+  theme_half_open()
+
+
+eggs_mid <- filter(zdn, age <= quantile(zdn$age, probs = 0.50)) %>%
+  select(tgroup,age,eggpFemDay) %>%
+  group_by(tgroup) %>%
+  summarise(q50e = mean(eggpFemDay, na.rm = TRUE),
+              q50se = se(eggpFemDay))
+se_mid <- eggs_mid[,c(1,3)]
+eggs_mid <- select(eggs_mid,tgroup,q50)
+
+pmid <- ggplot(eggs_mid,aes(tgroup,q50))+
+  geom_point() + 
+  geom_line() +
+  geom_errorbar(aes(ymin=q50-std_err,ymax=q50+std_err),
+                width=.2,position=position_dodge(0.05)) +
+  scale_colour_OkabeIto() +
+  theme_half_open() 
+
+
+eggs_old <- filter(zdn, age <= quantile(zdn$age, probs = 0.75)) %>%
+  select(tgroup,age,eggpFemDay) %>%
+  group_by(tgroup) %>%
+  summarise(q75e = mean(eggpFemDay, na.rm = TRUE),
+            q75se = se(eggpFemDay))
+# se_old <- eggs_old[,c(1,3)]
+# eggs_old <- select(eggs_old,tgroup,q75)
+
+pold <- ggplot(eggs_old,aes(tgroup,q75))+
+  geom_point() + 
+  geom_line() +
+  geom_errorbar(aes(ymin=q75-std_err,ymax=q75+std_err),
+                width=.2,position=position_dodge(0.05)) +
+  scale_colour_OkabeIto() +
+  theme_half_open()
+
+
+library(ggpubr)
+cir <- ggarrange(pyo, pmid, pold,ncol = 3, 
+                 labels = c("a", "b", "c"))
+
+ggplot2::ggsave(cir,file = "../../plots/transcripts_stat.pdf",
+                width = 8,height=6)
+```
 
