--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -18,15 +18,15 @@ output:
 ```{r}
 library(survival)
 library(survminer)
-library(splines) #needed by survival package
+library(splines)
 library(tidyverse) 
 library(forcats)
 library(cowplot)
-library(Greg)
+#library(Greg)
 
 
 source("color_map.R")
-source("ggplot_theme.R")
+#source("ggplot_theme.R")
 ```
 
 ## Load data & combine female and male events
@@ -257,19 +257,17 @@ erf.plot <- ggsurvplot(erf, data = earlyRichF,
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
-                     font.x = c(font_size),
-                     font.y = c(font_size),
-                     font.tickslab = c(font_size),
-                     #font.main = 12,
+                     font.x = 10,
+                     font.y = 10,
+                     font.tickslab = 10,
+                     font.main = 10,
                      risk.table = FALSE,
-                     #title="A",  
-                     #legend="none", #does not work
+                     #legend="none",
                      legend = c(0.9, 0.8),                     
                      title = "Early-C Females",
                      legend.labs = c("C", "DR"),
                      legend.title = "Adult Diet") +
-  theme_survminer(font.main = 11)  +
-  xlab("Age (days)")
+  xlab("Age (days)") 
 erf.plot
 
 # Test significance
@@ -298,23 +296,22 @@ summary(erm)$table[, "median"]
 
 erm.plot <- ggsurvplot(erm, data = earlyRichM, 
                      conf.int = FALSE,
-                     break.time.by = 20,
+                     break.time.by = 30,
                      palette = c("#999999", "#E69F00", 
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
-                     font.x = c(font_size),
-                     font.y = c(font_size),
-                     font.tickslab = c(font_size),
-                     #font.main = 12,
+                     font.x = 10,
+                     font.y = 10,
+                     font.tickslab = 10,
+                     font.main = 10,
                      risk.table = FALSE,
-                     #legend="none",
-                     legend = c(0.9, 0.8),                     
-                     title = "Early-C Males",
-                     legend.labs = c("C", "DR"),
-                     legend.title = "Adult Diet") +
-  theme_survminer(font.main = 11) +
-  xlab("Age (days)")
+                     legend="none",
+                     # legend = c(0.9, 0.8),                     
+                     # legend.labs = c("C", "DR"),
+                     legend.title="",
+                     title = "Early-C Males") +
+  xlab("Age (days)") 
 erm.plot
 
 survdiff(Surv(age) ~ adultTreat,
@@ -344,18 +341,18 @@ epf.plot <- ggsurvplot(epf, data = earlyPoorF,
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
-                     font.x = c(font_size),
-                     font.y = c(font_size),
-                     font.tickslab = c(font_size),
-                     #font.main = 12,
+                     font.x = 10,
+                     font.y = 10,
+                     font.tickslab = 10,
+                     font.main = 10,
                      risk.table = FALSE,
-                     #legend="none",
-                     legend = c(0.9, 0.8),                     
-                     title = "Early-DR Females",
-                     legend.labs = c("C", "DR"),
-                     legend.title = "Adult Diet") +
-  theme_survminer(font.main = 11)  +
-  xlab("Age (days)")
+                     legend="none",
+                     # legend = c(0.9, 0.8),                     
+                     # legend.labs = c("C", "DR"),
+                     # legend.title = "Adult Diet",
+                     title = "Early-DR Females") +
+  xlab("Age (days)") +
+  ylab("")
 epf.plot
 
 # Test significance
@@ -387,18 +384,18 @@ epm.plot <- ggsurvplot(epm, data = earlyPoorM,
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
-                     font.x = c(font_size),
-                     font.y = c(font_size),
-                     font.tickslab = c(font_size),
-                     #font.main = 12,
+                     font.x = 10,
+                     font.y = 10,
+                     font.tickslab = 10,
+                     font.main = 10,
                      risk.table = FALSE,
-                     #legend="none",
-                     legend = c(0.9, 0.8),                     
-                     title = "Early-DR Males",
-                     legend.labs = c("C", "DR"),
-                     legend.title = "Adult Diet") +
-  theme_survminer(font.main = 11) +
-  xlab("Age (days)")
+                     legend="none",
+                     # legend = c(0.9, 0.8),                     
+                     # legend.labs = c("C", "DR"),
+                     # legend.title = "Adult Diet",
+                     title = "Early-DR Males") +
+  xlab("Age (days)") +
+  ylab("")
 epm.plot
 
 survdiff(Surv(age, status ==2) ~ adultTreat,
@@ -414,14 +411,26 @@ splots[[2]] <- erm.plot
 splots[[3]] <- epf.plot
 splots[[4]] <- epm.plot
 
+splots_out <- arrange_ggsurvplots(
+  splots,
+  print = FALSE,
+  ncol = 2,
+  nrow = 2)
+#ggpar(splots_out, font.main=10)
 
-if (FALSE) {
-# Arrange and save into pdf file
-res <- arrange_ggsurvplots(splots,ncol = 2, nrow = 2,
-                            print = FALSE)
-}
+ggsave(
+  splots_out,
+  file = "~/MyGithub/early_experience/plots/SurvPlots_for_larvalDiet.pdf",
+  width = 6,
+  height = 5)
 
-ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_larvalDiet.pdf", height=6, width=8,res)
+# if (FALSE) {
+# # Arrange and save into pdf file
+# res <- arrange_ggsurvplots(splots,ncol = 2, nrow = 2,
+#                             print = FALSE)
+# }
+
+ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_larvalDiet.pdf", height=5, width=8,res)
 
 ```
 
